Handled problems of insertion of employees  and deleted of offices